# metrics-exporter-timescaledb

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.beads/: .beads-credential-key  metadata.json
.github/workflows/: ci.yml
crates/metrics-exporter/: Cargo.toml
crates/metrics-exporter/migrations/: 001_init.sql
crates/metrics-exporter/src/: aggregation.rs  api.rs  error.rs  lib.rs  models.rs  repository.rs
crates/metrics-exporter/src/models/: metric.rs
crates/metrics-exporter/src/repository/: repository.rs  timescaledb.rs
crates/metrics-exporter/src/repository/timescaledb/: repository.rs
crates/metrics-exporter/tests/: integration.rs
crates/metrics-visualizer/: Cargo.toml
crates/metrics-visualizer/src/: error.rs  lib.rs  main.rs
crates/metrics-visualizer/src/routes/: health.rs  metrics.rs
crates/metrics-visualizer/src/routes/metrics/: handler.rs
scripts/: test-timescale.ps1  test-timescale.sh
src/: lib.rs
static/: index.html
