[workspace]
resolver = "2"
members = [
    "crates/metrics-exporter",
    "crates/metrics-visualizer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hans W. Uhlig <hans.uhlig@ibm.com>"]
license = "MIT"
repository = "https://github.com/anomalyco/metrics-exporter-timescaledb"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

metrics = "0.22"
metrics-exporter-prometheus = "0.15"

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower-layers = "0.12"

utoipa = "4.2"
utoipa-gen = "4.2"
