[package]
name = "metrics-visualizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum-based metrics visualization API"

[[bin]]
name = "metrics-visualizer"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
chrono.workspace = true

metrics-exporter = { path = "../metrics-exporter" }

anyhow.workspace = true
